# platform.core.api.common

./: CMakeLists.txt  README  capi-base-common.pc  capi-base-common.pc.in  project.config
debian/: capi-base-common-dev.install  changelog  control  rules
doc/: tizen_doc.h
error_messages/: attach-panel-core.xml  attach-panel.xml  badge.xml  bundle.xml  calendar-service.xml  capi-appfw-app-manager.xml  capi-appfw-application.xml  capi-appfw-package-manager.xml  capi-base-common.xml  capi-base-utils.xml  capi-content-media-content.xml  capi-data-control.xml  capi-geofence-manager.xml  capi-location-manager.xml  capi-maps-service.xml  capi-media-audio-io.xml  capi-media-camera.xml  capi-media-codec.xml  capi-media-image-util.xml  capi-media-metadata-editor.xml  capi-media-metadata-extractor.xml  capi-media-player.xml  capi-media-radio.xml  capi-media-recorder.xml  capi-media-sound-manager.xml  capi-media-streamer.xml  capi-media-streamrecorder.xml  capi-media-tone-player.xml  capi-media-tool.xml  capi-media-video-util.xml  capi-media-vision.xml  capi-media-wav-player.xml  capi-mediademuxer.xml  capi-mediamuxer.xml  capi-message-port.xml  capi-messaging-email.xml  capi-messaging-messages.xml  capi-network-bluetooth.xml  capi-network-connection.xml  capi-network-http.xml  (+43 more)
include/: tizen.h  tizen_error.h  tizen_type.h
include/private/: tizen_error_private.h
packaging/: capi-base-common.spec
src/: tizen_error.c
tool/: CMakeLists.txt_coverage  error_msg_template.xml  find_differences.py  make_msg_header.py  tizen_error_private_template.h  update_msg_header.sh
